# backend/app/controllers/api/v1/projects_controller.rb
@@ -9,11 +9,14 @@ module Api
       def index
         @projects = Project.all
         render json: @projects
+        # render json: ProjectSerializer.new(projects).serialized_json
       end
 
       # GET /projects/1 or /projects/1.json
       def show
+        project = Project.find_by(slug: params[:slug])
         render json: @project
+        # render json: ProjectSerializer.new(@projects).serialized_json
       end
 
       # GET /projects/new
@@ -74,7 +77,20 @@ module Api
 
       # Only allow a list of trusted parameters through.
       def project_params
-        params.require(:project).permit(:project_name, :project_description, :project_website_url, :project_discord_url, :project_twitter_url, :project_opensea_url, :project_max_supply, :project_unit_price_eth, :project_sale_date, :minting_contract_address, :project_blockchain)
+        params.require(:project).permit(
+          :project_name, 
+          :slug,
+          :project_description, 
+          :project_website_url, 
+          :project_discord_url, 
+          :project_twitter_url, 
+          :project_opensea_url, 
+          :project_max_supply, 
+          :project_unit_price_eth, 
+          :project_sale_date, 
+          :minting_contract_address, 
+          :project_blockchain
+        )
       end
     end
   end
